Making layout more responsive
Added left and right margins for inputs, notification wisth is responsive now with max-width

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .tutorial {
-  width: 600px;
+  max-width: 600px;
   text-align: center;
   margin: auto;
 }
@@ -34,6 +34,10 @@ figure .image img {
 .forms {
   display: flex;
   justify-content: space-around;
+}
+
+.column {
+  margin: 0 15px 0;
 }
 
 .dropdown-item {
